<resources>
    <string name="app_name">adroit_one_</string>
    <string name="title_activity_navigation_drower_using_for_fragments">
        NavigationDrowerUsingForFragmentsActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash_board">Dash Board</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="details_for_all_product">Details For All Product</string>
    <string name="product_price">Product Price</string>
    <string name="upload_pitcher">Upload Pitcher</string>
    <string name="select_category">Select Category</string>
    <string name="cart">CART</string>
    <string name="buy">BUY</string>
    <string name="Category">Category</string>
    <string name="category">Category:-</string>
    <string name="name">Name:-</string>
    <string name="Name">Name</string>
    <string name="detail">Detail:-</string>
    <string name="Detail">Detail</string>
    <string name="price">Price:-</string>
    <string name="Price">Price</string>
    <string name="quantity">Quantity:-</string>
    <string name="Quantity">Quantity</string>
    <string name="enter_quantity_in_number">Enter Quantity In Number</string>
</resources>