<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ShowDataDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/laptop"
                android:layout_marginVertical="10dp" />

            <TextView
                android:id="@+id/tvNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="12dp"
                android:padding="10dp"
                android:hint="@string/Name" />


            <TextView
                android:id="@+id/tvDetailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_marginHorizontal="12dp"
                android:padding="10dp"
                android:hint="@string/details_for_all_product" />


                 <TextView
                     android:id="@+id/tvPriceId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:padding="10dp"
                     android:textColor="@color/black"
                     android:background="@color/white"
                     android:layout_marginVertical="5dp"
                     android:layout_marginHorizontal="12dp"
                     android:hint="@string/product_price" />


                 <TextView
                     android:id="@+id/tvCategoryId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:padding="10dp"
                     android:textColor="@color/black"
                     android:background="@color/white"
                     android:layout_marginVertical="5dp"
                     android:layout_marginHorizontal="12dp"
                     android:hint="@string/Category" />
                 <TextView
                     android:id="@+id/tvQuantityId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:padding="10dp"
                     android:textColor="@color/black"
                     android:background="@color/white"
                     android:layout_marginVertical="5dp"
                     android:layout_marginHorizontal="12dp"
                     android:hint="@string/Quantity" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvCartId"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="AT TO CARD"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="14dp"
                android:background="@color/watercolor"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tvBuyId"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/buy"
                android:textStyle="bold"
                android:padding="14dp"
                android:textColor="@color/white"
                android:background="@color/red"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>