<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".AddProductActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="ADD PRODUCT"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/watercolorbackgroundcrav" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginVertical="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Click"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <TextView
                    android:layout_weight=".25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/etNameId"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="12dp"
                    android:padding="10dp"
                    android:background="@drawable/watercolorbackgroundcrav"
                    android:hint="@string/name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <TextView
                    android:layout_weight=".25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/detail" />

                <EditText
                    android:id="@+id/etDetailId"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="12dp"
                    android:padding="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/watercolorbackgroundcrav"
                    android:hint="@string/details_for_all_product" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <TextView
                    android:layout_weight=".25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/etPriceId"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="5dp"
                    android:numeric="decimal"
                    android:background="@drawable/watercolorbackgroundcrav"
                    android:layout_marginHorizontal="12dp"
                    android:hint="@string/product_price" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1"
                >

                <TextView
                    android:layout_weight=".25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/etQuantityId"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="5dp"
                    android:numeric="integer"
                    android:background="@drawable/watercolorbackgroundcrav"
                    android:layout_marginHorizontal="12dp"
                    android:hint="@string/enter_quantity_in_number" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:textStyle="italic"
                android:textSize="14sp"
                android:textColor="@color/watercolor"
                android:layout_marginStart="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/btnSubmitId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="SUBMIT"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>